# graphene-django-realtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/graphene_django_realtime/: __init__.py  _relay.py  broadcast.py  consumer.py  registry.py  serializers.py  subscriptions.py
tests/: conftest.py  settings.py  test_broadcast.py  test_consumer.py  test_serializers.py  test_subscriptions.py
tests/testapp/: models.py  schema.py
