[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphene-django-realtime"
version = "0.2.2a0"
description = "Reuse your graphene-django schema as the single source of truth for WebSocket payloads."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "VKuzmeniuk" }]
keywords = ["graphene", "django", "graphql", "websocket", "channels", "realtime", "subscriptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2",
    "graphene>=3.3,<4",
    "graphene-django>=3.2,<4",
    "channels>=4.0,<5",
    "asgiref>=3.7",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-django>=4.8",
    "redis>=5.0",
    "fakeredis>=2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/vkuzmeniuk/graphene-django-realtime"
Issues = "https://github.com/vkuzmeniuk/graphene-django-realtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphene_django_realtime"]

[tool.hatch.build.targets.wheel.force-include]
"src/graphene_django_realtime/py.typed" = "graphene_django_realtime/py.typed"
